--- a/rust-game-engine/Cargo.toml
+++ b/rust-game-engine/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [lib]
-crate-type = ["cdylib", "rlib"]
+crate-type = ["cdylib"]
 
 [dependencies]
 wasm-bindgen = "0.2"
@@ -13,9 +13,13 @@ web-sys = { version = "0.3", features = ["console"] }
 serde = { version = "1.0", features = ["derive"] }
 serde-wasm-bindgen = "0.6"
 getrandom = { version = "0.2", features = ["js"] }
+serde_json = "1.0"
+rand = "0.8"
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3"
 
 [profile.release]
-opt-level = "s"
+lto = true
+opt-level = "z"
+codegen-units = 1
